# commercevision-agent

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  alembic.ini  findings.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  pyproject.toml  task_plan.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
.obsidian/: app.json  appearance.json  core-plugins.json  graph.json  templates.json
.scratch/phase-2-assets-retrieval/: spec.md
.scratch/phase-2-assets-retrieval/issues/: 01-versioned-event-routing.md  02-durable-operations-recovery.md  03-product-catalog-workspace.md  04-direct-upload-quarantine.md  05-asset-validation-pipeline.md  06-rights-record-usability.md  07-product-brief-hitl.md  08-brand-profile-publication.md  09-image-indexing-collection-registry.md  10-product-fused-cjk-search.md  11-rights-first-hybrid-retrieval.md  12-catalog-asset-mcp.md  13-retention-deletion-reconciliation.md  14-milvus-rebuild-upgrade.md  15-observability-runbooks.md  16-retrieval-evaluation-gate.md  17-phase2-release-acceptance.md
apps/web/: eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: catalog-api.ts
config/: base.yaml
database/migrations/: README.md  env.py  script.py.mako
docs/: README.md
docs/00-product/: product-definition.md  user-workflows.md
docs/01-architecture/: agent-runtime.md  repository-layout.md  system-architecture.md  workflow-state-machine.md
docs/02-data/: data-architecture.md  memory-and-retrieval.md  mysql-schema.md
docs/03-ai/: evaluation-and-replay.md  prompt-context-and-guardrails.md  tools-mcp-and-routing.md
docs/04-engineering/: api-events-and-integrations.md  reliability-security-and-governance.md  testing-strategy.md
docs/05-deployment/: ci-cd-and-release.md  deployment-topology.md  local-development.md  observability-and-operations.md
docs/06-roadmap/: acceptance-criteria.md  implementation-roadmap.md
docs/07-decisions/: ADR-001-public-vertical-agent.md  ADR-002-python-first-stack.md  ADR-003-mysql-and-milvus.md  ADR-004-single-agent-langgraph.md  ADR-005-open-source-boundary.md  ADR-006-asset-retention-boundary.md  README.md
docs/08-research/: external-references.md  job-market-fit.md  source-adoption.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/api/: openapi.json
docs/templates/: adr-template.md  evaluation-experiment.md  incident-report.md
infra/compose/: docker-compose.yml
infra/docker/: otel.Dockerfile  python.Dockerfile  web.Dockerfile
infra/otel/: otel-collector-config.yaml
scripts/: audit_python.py  dev.ps1  dev.sh  export_openapi.py  generate_web_types.py  verify_phase0.py  verify_phase1.py
services/api/: pyproject.toml
services/api/src/commercevision_api/: __init__.py  catalog_routes.py  container.py  errors.py  identity.py  main.py  operation_routes.py  readiness.py  workflow_routes.py  workspace_identity.py
services/mcp-server/: pyproject.toml
services/mcp-server/src/commercevision_mcp/: __init__.py  main.py
services/scheduler/: pyproject.toml
services/scheduler/src/commercevision_scheduler/: __init__.py  main.py  runtime.py
services/worker/: pyproject.toml
services/worker/src/commercevision_worker/: __init__.py  celery_app.py  executors.py  runtime.py
tests/contract/: test_catalog_openapi.py  test_operation_openapi.py  test_web_proxy.py
tests/integration/: conftest.py  test_api_operations.py  test_api_products.py  test_api_workflows.py  test_catalog_migration_mysql.py  test_checkpointer_mysql.py  test_dead_letter_replay_mysql.py  test_integrity_classification_mysql.py  test_operation_acceptance_mysql.py  test_operation_migration_mysql.py  test_operations_mysql.py  test_reliability_mysql.py  test_runtime_mysql.py  test_scheduler_mysql.py  test_workspace_identity_http.py  test_workspace_ownership_mysql.py
tests/unit/: test_api_errors.py  test_api_health.py  test_catalog_domain.py  test_dead_letter_identity.py  test_event_contracts.py  test_event_routing.py  test_operation_domain.py  test_persistence_datetime.py  test_scheduler_routing.py  test_scheduler_scanners.py  test_service_health.py  test_settings.py  test_tool_runtime.py  test_worker_transport.py  test_workflow_domain.py  test_workspace_identity.py
(+8 files in other folders)
