[project]
name = "commercevision-mcp-server"
version = "0.1.0"
description = "Controlled CommerceVision MCP tool server"
requires-python = ">=3.13,<3.14"
dependencies = [
  "commercevision-contracts",
  "commercevision-observability",
  "mcp>=1.9,<2",
  "starlette>=0.49,<2",
]

[project.scripts]
commercevision-mcp = "commercevision_mcp.main:main"

[tool.uv.sources]
commercevision-contracts = { workspace = true }
commercevision-observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commercevision_mcp"]
