[project]
name = "commercevision-scheduler"
version = "0.1.0"
description = "Outbox, recovery, and retention scheduler entrypoint"
requires-python = ">=3.13,<3.14"
dependencies = [
  "celery>=5.4,<6",
  "commercevision-application",
  "commercevision-contracts",
  "commercevision-observability",
  "commercevision-persistence",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
commercevision-scheduler = "commercevision_scheduler.main:main"

[tool.uv.sources]
commercevision-application = { workspace = true }
commercevision-contracts = { workspace = true }
commercevision-observability = { workspace = true }
commercevision-persistence = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commercevision_scheduler"]
