[project]
name = "commercevision-worker"
version = "0.1.0"
description = "CommerceVision Agent and media worker entrypoint"
requires-python = ">=3.13,<3.14"
dependencies = [
  "celery>=5.4,<6",
  "commercevision-agent-core",
  "commercevision-application",
  "commercevision-contracts",
  "commercevision-domain",
  "commercevision-observability",
  "commercevision-persistence",
  "commercevision-providers",
  "commercevision-tool-runtime",
  "kombu>=5.6,<6",
]

[tool.uv.sources]
commercevision-agent-core = { workspace = true }
commercevision-application = { workspace = true }
commercevision-contracts = { workspace = true }
commercevision-domain = { workspace = true }
commercevision-observability = { workspace = true }
commercevision-persistence = { workspace = true }
commercevision-providers = { workspace = true }
commercevision-tool-runtime = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commercevision_worker"]
